feat: demo full CV preview with shared data context

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -468,6 +468,7 @@
         "education": "التعليم",
         "projects": "المشاريع",
         "certificates": "الشهادات",
+        "contact": "التواصل",
         "languages": "اللغات"
       },
       "actions": {
