--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -468,6 +468,7 @@
         "education": "Bildung",
         "projects": "Projekte",
         "certificates": "Zertifikate",
+        "contact": "Kontakt",
         "languages": "Sprachen"
       },
       "actions": {
