--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -468,6 +468,7 @@
         "education": "Education",
         "projects": "Projects",
         "certificates": "Certificates",
+        "contact": "Contact",
         "languages": "Languages"
       },
       "actions": {
