--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -468,6 +468,7 @@
         "education": "Educación",
         "projects": "Proyectos",
         "certificates": "Certificaciones",
+        "contact": "Contacto",
         "languages": "Idiomas"
       },
       "actions": {
