--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -468,6 +468,7 @@
         "education": "Éducation",
         "projects": "Projets",
         "certificates": "Certifications",
+        "contact": "Contact",
         "languages": "Langues"
       },
       "actions": {
