--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -468,6 +468,7 @@
         "education": "शिक्षा",
         "projects": "प्रोजेक्ट्स",
         "certificates": "प्रमाणपत्र",
+        "contact": "संपर्क",
         "languages": "भाषाएँ"
       },
       "actions": {
