--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -468,6 +468,7 @@
         "education": "学歴",
         "projects": "プロジェクト",
         "certificates": "資格",
+        "contact": "連絡先",
         "languages": "言語"
       },
       "actions": {
