--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -468,6 +468,7 @@
         "education": "학력",
         "projects": "프로젝트",
         "certificates": "자격증",
+        "contact": "연락처",
         "languages": "언어"
       },
       "actions": {
