--- a/src/i18n/locales/pt.json
+++ b/src/i18n/locales/pt.json
@@ -468,6 +468,7 @@
         "education": "Educação",
         "projects": "Projetos",
         "certificates": "Certificações",
+        "contact": "Contato",
         "languages": "Idiomas"
       },
       "actions": {
