--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -468,6 +468,7 @@
         "education": "教育",
         "projects": "项目",
         "certificates": "证书",
+        "contact": "联系",
         "languages": "语言"
       },
       "actions": {
